--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Политика конфиденциальности</h1>
 <p>Последнее обновление: 27 июня 2025 года</p>
 <p>Настоящая Политика конфиденциальности описывает наши правила и процедуры по сбору, использованию и раскрытию вашей информации при использовании вами Сервиса, а также информирует вас о ваших правах на конфиденциальность и о том, как закон защищает вас.</p>
-<p>Мы используем ваши персональные данные для предоставления и улучшения Сервиса. Используя Сервис, вы соглашаетесь на сбор и использование информации в соответствии с настоящей Политикой конфиденциальности. Эта Политика конфиденциальности была создана с помощью <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Генератора политики конфиденциальности</a>.</p>
+<p>Мы используем ваши персональные данные для предоставления и улучшения Сервиса. Используя Сервис, вы соглашаетесь на сбор и использование информации в соответствии с настоящей Политикой конфиденциальности.</p>
 
 <h2>Толкование и определения</h2>
 <h3>Толкование</h3>
@@ -122,7 +122,7 @@
 <h1>Privacy Policy</h1>
 <p>Last updated: June 27, 2025</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
-<p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
+<p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</p>
 <h2>Interpretation and Definitions</h2>
 <h3>Interpretation</h3>
 <p>The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
